src/test/deca/context/valid/fields/public_field_access_other_object.deca
// Description :
//    Accès à un champ public via un autre objet.
//
// Resultats :
//    OK

class A {
    public int x;
}

{
    A a = new A();
    a.x = 2;
    println(a.x);
}

