src/test/deca/context/invalid/avecObjet/field_assign_wrong_object_type_custom.deca
// Description :
// accès à un champ via un objet d'un autre type
//
// Resultats :
// Erreur contextuelle
// Ligne 12 : champ inexistant pour ce type

class B {
    int a;
}

class C {
    void test() {
        String s;
        s.a = 3; // invalide
    }
}
